--- a/pages sloth/pages/navigation.html
+++ b/pages sloth/pages/navigation.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="../styles/navigation.css">
     <title>Navigation</title>
 </head>
+
 <body>
     <nav class="navbar">
         <div class="brand">
@@ -15,6 +17,7 @@
         </div>
         <div class="menu">
             <a href="home.html">Home</a>
+            <a href="lab.html">Lab</a>
             <a href="booklist.html">Booklist</a>
             <a href="profile.html">Profile</a>
             <a href="logout.html" class="logout">Logout</a>
@@ -23,4 +26,5 @@
         </div>
     </nav>
 </body>
+
 </html>
