--- a/pages sloth/pages/profile.html
+++ b/pages sloth/pages/profile.html
@@ -1,45 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../styles/navigation.css" />
-    <link rel="stylesheet" href="../styles/profile.css" />
-    <title>Login</title>
-  </head>
-  <body>
-    <nav class="navbar">
-      <div class="brand">
-        <img src="../assets/brand.png" alt="logo" class="brand-img" />
-        <div class="brand-text">Sloth Flying Lab</div>
-      </div>
-      <div class="menu">
-        <a href="home.html">Home</a>
-        <a href="booklist.html">Booklist</a>
-        <a href="profile.html" class="active">Profile</a>
-        <!-- <a href="logout.html">Logout</a> -->
-        <a href="login.html">Login</a>
-        <a href="register.html">Register</a>
-      </div>
-    </nav>
-    <div class="container">
-      <img src="../assets/brand.png" alt="logo" class="logo" />
-      <div class="information">
-        <div>Name</div>
-        <div>:</div>
-        <div> Watcharin Kanha</div>
-        <div>Email</div>
-        <div>:</div>
-        <div>watcarin@gmail.com</div>
-        <div>Tel</div>
-        <div>:</div>
-        <div>09x-xxx-xxxx</div>
-        <div>User ID</div>
-        <div>:</div>
-        <div>00000001</div>
-      </div>
-      <button type="button">Edit Profile</button>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="../styles/navigation.css" />
+  <link rel="stylesheet" href="../styles/profile.css" />
+  <title>Login</title>
+</head>
+
+<body>
+  <nav class="navbar">
+    <div class="brand">
+      <img src="../assets/brand.png" alt="logo" class="brand-img" />
+      <div class="brand-text">Sloth Flying Lab</div>
     </div>
-  </body>
+    <div class="menu">
+      <a href="home.html">Home</a>
+      <a href="lab.html">Lab</a>
+      <a href="booklist.html">Booklist</a>
+      <a href="profile.html" class="active">Profile</a>
+      <!-- <a href="logout.html">Logout</a> -->
+      <a href="login.html">Login</a>
+      <a href="register.html">Register</a>
+    </div>
+  </nav>
+  <div class="container">
+    <img src="../assets/brand.png" alt="logo" class="logo" />
+    <div class="information">
+      <div>Name</div>
+      <div>:</div>
+      <div> Watcharin Kanha</div>
+      <div>Email</div>
+      <div>:</div>
+      <div>watcarin@gmail.com</div>
+      <div>Tel</div>
+      <div>:</div>
+      <div>09x-xxx-xxxx</div>
+      <div>User ID</div>
+      <div>:</div>
+      <div>00000001</div>
+    </div>
+    <button type="button">Edit Profile</button>
+  </div>
+</body>
+
 </html>
