update ui edit_profile admin_login profile_view confirm_popup

--- a/pages sloth/pages/admin_login.html
+++ b/pages sloth/pages/admin_login.html
@@ -10,6 +10,7 @@
   </head>
   <body>
     <form action="#" class="container">
+      <div class="title">Administator Login</div>
       <img src="../assets/brand1.JPG" alt="logo" class="logo" />
       <div class="login-form">
         <div class="input-field">
@@ -22,7 +23,6 @@
         </div>
       </div>
       <input type="submit" value="Login" id="submit"/>
-      <p>Don't have an account? <a href="register.html" id="to-sign-up">Sign up here</a></p>
     </form>
   </body>
 </html>
