--- a/pages sloth/pages/lab.html
+++ b/pages sloth/pages/lab.html
@@ -21,9 +21,7 @@
             <a href="lab.html" class="active">Lab</a>
             <a href="booklist.html">Booklist</a>
             <a href="profile.html">Profile</a>
-            <!-- <a href="logout.html" class="logout">Logout</a> -->
-            <a href="login.html">Login</a>
-            <a href="register.html">Register</a>
+            <a href="logout.html" class="logout">Logout</a>
         </div>
     </nav>
 
