--- a/pages sloth/pages/profile.html
+++ b/pages sloth/pages/profile.html
@@ -27,22 +27,20 @@
     </div>
   </nav>
   <div class="container">
-    <img src="../assets/brand.png" alt="logo" class="logo" />
+    <div class="image">
+      <img src="../assets/brand.png" alt="user_image" />
+    </div>
     <div class="information">
       <div>Name</div>
-      <div>:</div>
-      <div> Watcharin Kanha</div>
+      <div id="fullname"> Watcharin Kanha</div>
       <div>Email</div>
-      <div>:</div>
-      <div>watcarin@gmail.com</div>
-      <div>Tel</div>
-      <div>:</div>
-      <div>09x-xxx-xxxx</div>
+      <div id="email">watcarin@gmail.com</div>
+      <div>Phone</div>
+      <div id="phone">09x-xxx-xxxx</div>
       <div>User ID</div>
-      <div>:</div>
-      <div>00000001</div>
+      <div id="id">00000001</div>
     </div>
-    <button type="button">Edit Profile</button>
+    <button type="button" onclick="window.location = './edit_profile.html'" id="edit">Edit Profile</button>
   </div>
 </body>
 
