--- a/pages sloth/pages/navigation.html
+++ b/pages sloth/pages/navigation.html
@@ -1,30 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../styles/navigation.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../styles/navigation.css" />
     <title>Navigation</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <nav class="navbar">
-        <div class="brand">
-            <img src="../assets/brand.png" alt="logo" class="brand-img">
-            <div class="brand-text">Sloth Flying Lab</div>
-        </div>
-        <div class="menu">
-            <a href="home.html">Home</a>
-            <a href="lab.html">Lab</a>
-            <a href="booklist.html">Booklist</a>
-            <a href="profile.html">Profile</a>
-            <a href="logout.html" class="logout">Logout</a>
-            <a href="login.html">Login</a>
-            <a href="register.html">Register</a>
-        </div>
+      <div class="brand">
+        <img src="../assets/brand.png" alt="logo" class="brand-img" />
+        <div class="brand-text">Sloth Flying Lab</div>
+      </div>
+      <div class="menu">
+        <a href="home.html" id="home">Home</a>
+        <a href="lab.html" id="lab">Lab</a>
+        <a href="booklist.html" id="booklist">Booklist</a>
+        <a href="profile.html" id="profile">Profile</a>
+        <a href="logout.html" id="logout" class="logout">Logout</a>
+        <a href="login.html" id="login">Login</a>
+        <a href="register.html" id="register">Register</a>
+      </div>
     </nav>
-</body>
-
+  </body>
 </html>
