Add admin-lab admin-lab-view lab-view & Update lab

--- a/pages sloth/pages/lab.html
+++ b/pages sloth/pages/lab.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/navigation.css">
     <link rel="stylesheet" href="../styles/lab.css">
-    <title>Navigation</title>
+    <title>Lab</title>
 </head>
 
 <body>
@@ -28,51 +28,51 @@
     <div class="container">
         <div class="lab">
             <div>
-                <img src="../assets/brand1.jpg" alt="logo" class="lab-img">
+                <img src="../assets/Oscilloscope.png" alt="logo" class="lab-img">
             </div>
             <div>
                 <div>Laboratory 1</div>
                 <div>Oscilloscope</div>
-                <button type="button">View</button>
+                <button type="button" onclick="window.location.href='lab-view.html'">View</button>
             </div>
         </div>
         <div class="lab">
             <div>
-                <img src="../assets/brand1.jpg" alt="logo" class="lab-img">
+                <img src="../assets/Digital-multimeter.jpg" alt="logo" class="lab-img">
             </div>
             <div>
                 <div>Laboratory 2</div>
-                <div>Meter</div>
+                <div>Multimeter</div>
                 <button type="button">View</button>
             </div>
         </div>
         <div class="lab">
             <div>
-                <img src="../assets/brand1.jpg" alt="logo" class="lab-img">
+                <img src="../assets/Rasberry_Pi.jpg" alt="logo" class="lab-img">
             </div>
             <div>
                 <div>Laboratory 3</div>
-                <div>Oscilloscope</div>
+                <div>Raspberry Pi</div>
                 <button type="button">View</button>
             </div>
         </div>
         <div class="lab">
             <div>
-                <img src="../assets/brand1.jpg" alt="logo" class="lab-img">
+                <img src="../assets/Arduino.jpg" alt="logo" class="lab-img">
             </div>
             <div>
                 <div>Laboratory 4</div>
-                <div>Oscilloscope</div>
+                <div>Arduino</div>
                 <button type="button">View</button>
             </div>
         </div>
         <div class="lab">
             <div>
-                <img src="../assets/brand1.jpg" alt="logo" class="lab-img">
+                <img src="../assets/Router.jpg" alt="logo" class="lab-img">
             </div>
             <div>
                 <div>Laboratory 5</div>
-                <div>Oscilloscope</div>
+                <div>Router</div>
                 <button type="button">View</button>
             </div>
         </div>
