--- a/pages sloth/pages/home.html
+++ b/pages sloth/pages/home.html
@@ -38,33 +38,35 @@
               <h3>Member</h3>
               <span class="close">&times;</span>
             </div>
-            <table>
-              <tr>
-                <td>61010416</td>
-                <td>ธนกฤต</td>
-                <td>เจริญบูลย์วิวัฒน์</td>
-              </tr>
-              <tr>
-                <td>61010888</td>
-                <td>รวิสรา</td>
-                <td>หนูเพ็ง</td>
-              </tr>
-              <tr>
-                <td>61010940</td>
-                <td>วราวุธ</td>
-                <td>พรบัณฑิตวงศ์</td>
-              </tr>
-              <tr>
-                <td>61010960</td>
-                <td>วัชรินทร์</td>
-                <td>กัณหา</td>
-              </tr>
-              <tr>
-                <td>61011144</td>
-                <td>สุภามาศ</td>
-                <td>สมสายผล</td>
-              </tr>
-            </table>
+            <div class="modal-table">
+              <table class="member-table">
+                <tr>
+                  <td>61010416</td>
+                  <td>ธนกฤต</td>
+                  <td>เจริญบูลย์วิวัฒน์</td>
+                </tr>
+                <tr>
+                  <td>61010888</td>
+                  <td>รวิสรา</td>
+                  <td>หนูเพ็ง</td>
+                </tr>
+                <tr>
+                  <td>61010940</td>
+                  <td>วราวุธ</td>
+                  <td>พรบัณฑิตวงศ์</td>
+                </tr>
+                <tr>
+                  <td>61010960</td>
+                  <td>วัชรินทร์</td>
+                  <td>กัณหา</td>
+                </tr>
+                <tr>
+                  <td>61011144</td>
+                  <td>สุภามาศ</td>
+                  <td>สมสายผล</td>
+                </tr>
+              </table>
+            </div>
           </div>
         </div>
       </div>
