--- a/pages sloth/pages/home.html
+++ b/pages sloth/pages/home.html
@@ -14,7 +14,7 @@
   </head>
 
   <body>
-    <div class="v98_250">
+    <div class="main_container">
       <div class="container">
         <img src="../assets/brand1.JPG" alt="logo" class="logo" />
         <div class="label">
@@ -24,7 +24,6 @@
           >
         </div>
       </div>
-
       <div class="member">
         <button class="btmember" id="myBtn">
           <img
