--- a/pages sloth/pages/home.html
+++ b/pages sloth/pages/home.html
@@ -28,7 +28,8 @@
         <button class="btmember" id="myBtn">
           <img
             src="https://img.icons8.com/color/48/000000/group-background-selected.png"
-          />Member
+          />
+          <span>Member</span>
         </button>
         <div id="myModal" class="modal">
           <!-- Modal content -->
